# esg-observability

./: .gitignore  REDEPLOY.md  WATER-SLO-ALERT-SUMMARY.md  pyproject.toml
.github/: copilot-instructions.md
iot-observability-stack/: .dockerignore  ALERT-SETUP-GUIDE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  health_checks.py  requirements.txt  run_simulator.py  scan-3.14.4.txt  scan-bookworm.txt  scan.txt
iot-observability-stack/configs/: alertmanager.yml  grafana-dashboard.yaml  grafana-datasource.yaml  grafana-notifier.yaml  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml
iot-observability-stack/dashboards/: governance-command-center-dashboard.json  grid-carbon-pathway-dashboard.json  iot-metrics-dashboard.json  monsoon-efficiency-dashboard.json  water-stewardship-dashboard.json
iot-observability-stack/src/: app.py  dump_metrics.py  scrape_app_metrics.py
iot-observability-stack/src/collector/: __init__.py  metrics.py  telemetry.py
iot-observability-stack/src/sensors/: simulator.py
