[project]
name = "slo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "opentelemetry-instrumentation>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "pandas>=3.0.2",
    "requests>=2.33.1",
]
